--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ bld/
 
 # Visual Studio 2015 cache/options directory
 .vs/
+*.vs
+.vs
+vs/
+
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
@@ -259,3 +263,4 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+*.gitattributes
